# blocks

./: Cargo.toml  README.md  Trunk.toml  build.rs  index.html
block_components/: Cargo.toml
block_components/src/: lib.rs
block_components/src/components/: icon.rs  link.rs  mod.rs  text.rs
block_components/src/sections/: banner.rs  header.rs
block_components/src/traits/: component.rs  mod.rs  section.rs
block_utils/: Cargo.toml
block_utils/src/: events.rs  lib.rs  strings.rs  web_api.rs
block_utils/src/traits/: mod.rs
examples/component-library/: Cargo.toml  README.md  Trunk.toml  index.html
examples/component-library/src/: app.rs
examples/component-library/static/css/: reset.css
examples/simple/: README.md  Trunk.toml  index.html
examples/simple/src/: app.rs  main.rs
examples/simple/static/css/: variables.css
src/: app.rs  helpers.rs  lib.rs  macros.rs  traits.rs  utils.rs
src/components/: banner.rs  header.rs  icon.rs  link.rs  mod.rs  text.rs  title.rs
src/sections/: banner.rs  header.rs  mod.rs
src/traits/: blocks.rs  mod.rs  unwrap.rs
src/utils/: dom.rs  mod.rs
