[package]
name = "wesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"  # 3 => fast, s/z => small

[lib]
crate-type = ["cdylib"]

[dependencies]
dominator = "0.5.18"
futures-signals = "0.3.22"
wasm-bindgen = "0.2.74"
console_error_panic_hook = "0.1.6"
once_cell = "1.8.0"
wasm-bindgen-futures = "0.4.24"
web-sys = "0.3.51"
