[package]
name = "blocks"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"  # 3 => fast, s/z => small

[lib]
crate-type = ["cdylib"]

[dependencies]
dominator = "0.5.18"
futures-signals = "0.3.22"
wasm-bindgen = "0.2.74"
console_error_panic_hook = "0.1.6"
once_cell = "1.8.0"
wasm-bindgen-futures = "0.4.24"
anyhow = "1.0.41"
js-sys = "0.3.51"
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_json = "1.0.64"

[dependencies.web-sys]
version = "0.3.51"
features = [
  "Url",
  "console",
  "Window",
  "Document",
  "Storage"
]

[build-dependencies]
anyhow = "1.0.41"
