[package]
name = "block_utils"
version = "0.1.0"
edition = "2021"

[features]
default = ["unwrap_verbose"]
unwrap_verbose = []

[dependencies]
dominator = "0.5.18"
futures-signals = "0.3.22"
wasm-bindgen = "0.2.74"
console_error_panic_hook = "0.1.6"
once_cell = "1.8.0"
wasm-bindgen-futures = "0.4.24"
anyhow = "1.0.41"
js-sys = "0.3.51"
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_json = "1.0.64"
cfg-if = "1.0.0"
url = { version = "2.2.2", features = ["serde"] }

[dependencies.web-sys]
version = "0.3.51"
features = [
  "console",
  "Window",
  "Document",
  "Storage"
]

[build-dependencies]
anyhow = "1.0.41"
